# sdk-native

./: .gitignore  INTEGRATING.md  README.md
.github/workflows/: ci.yml  release.yml
common/: protocol.h  rootherald.h
docs/: abi-migration-plan.md  target-abi.md
linux/: CMakeLists.txt  event_log.c  event_log.h  http_curl.c  rootherald_linux.c  rootherald_linux.h  tpm_esapi.c
linux/native_host/: com.rootherald.native.json  native_host.c
linux/src/client/: rootherald_client.c  rootherald_linux.c  rootherald_linux.h  rootherald_session.c  rootherald_stub.c
linux/src/internal/: log.c  log.h
linux/src/tpm/: tpm_esapi.c  tpm_esapi.h
linux/src/transport/: http_curl.c
macos/: CMakeLists.txt  http_nsurlsession.h  rootherald_macos.m  secure_enclave.h
macos/native_host/: native_host.m
macos/src/client/: rootherald_client.m  rootherald_macos.h  rootherald_macos.m  rootherald_session.m
macos/src/internal/: log.h  log.m
macos/src/tpm/: secure_enclave.m
macos/src/transport/: http_nsurlsession.m
samples/minimal/linux/: CMakeLists.txt  main.c
samples/minimal/macos/: CMakeLists.txt  main.m
samples/minimal/windows/: CMakeLists.txt  main.cpp
samples/unity/: README.md
samples/unity/Assets/RootHerald/Scripts/: RootHeraldGate.cs
samples/unreal/: README.md
samples/unreal/Plugins/RootHeraldUE/: RootHeraldUE.uplugin
samples/unreal/Plugins/RootHeraldUE/Source/RootHeraldUE/: RootHeraldUE.Build.cs
samples/unreal/Plugins/RootHeraldUE/Source/RootHeraldUE/Private/: RootHeraldClient.cpp  RootHeraldUEModule.cpp
samples/unreal/Plugins/RootHeraldUE/Source/RootHeraldUE/Public/: RootHeraldClient.h
windows/: CMakeLists.txt  amd_aia_fetch.cpp  amd_aia_fetch.h  attestation_key_provider.h  boot_verify.cpp  dbx_checker.cpp  event_log.h  event_log_parser.cpp  http_winhttp.cpp  rootherald_client.cpp  rootherald_win.cpp  rootherald_win.h  secureboot_validator.cpp  secureboot_validator.h  tbs_key_provider.cpp  tpm_commands.cpp  tpm_commands.h  tpm_pcp.cpp  win_cert_store_intermediates.cpp  win_cert_store_intermediates.h
windows/src/boot/: event_log.cpp  event_log_parser.h
windows/src/certs/: amd_aia_fetch.cpp
windows/src/client/: rootherald_client.cpp  rootherald_win.cpp
windows/src/internal/: json_helpers.h  log.cpp  log.h
windows/src/tpm/: attestation_key_provider.h  pcp_key_provider.h  tbs_key_provider.cpp  tbs_key_provider.h  tpm_commands.cpp  tpm_pcp.cpp  tpm_pcp.h
windows/src/transport/: http_winhttp.cpp  http_winhttp.h
windows/tools/: dbx_checker.h  gate_collect.cpp  test_client.cpp  test_harness.cpp  tpm_diag.cpp
